--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2"
   },
